@@ -1,3 +1,7 @@
+1995-01-05  Thomas E. Dickey  <dickey@clark.net>
+
+	* src/splitit/splitit.c: added usage-message text
+
 1994-10-17  Thomas E. Dickey  <dickey@clark.net>
 
 	* src/splitit/splitit.c: RCS_BASE
